Fix image align Add numeric display class for every tag

--- a/style/commun.css
+++ b/style/commun.css
@@ -21,9 +21,11 @@ h2 {
   margin-bottom: 20px;
 }
 
+img { vertical-align: middle}
+
 /* Table */
-table .num,
-table .date {
+.num,
+.date {
   text-align: right
 }
 
